fixed button alignment

--- a/src/css/Notifications.css
+++ b/src/css/Notifications.css
@@ -66,7 +66,9 @@
 }
 
 .NotificationMessage {
+    text-align: left;
     font-size: 20px;
+    width: 40em;
 }
 
 .NotificationDate {
@@ -76,8 +78,7 @@
 }
 
 .NotificationButtonContainer {
-    width: 19em;
-    text-align: right;
+    width: 12em;
     margin-top: auto;
     margin-bottom: auto;
 }
